--- a/package.json
+++ b/package.json
@@ -1,2 +1,26 @@
 {
+  "scripts": {
+    "test": "testcafe \"lambdatest:Chrome@85.0:Windows 10\" tests/**/* -r xunit:/tmp/test-results/res.xml"
+  },
+  "devDependencies": {
+    "testcafe": "*",
+    "testcafe-reporter-xunit": "*",
+    "testcafe-browser-provider-lambdatest": "*"
+  },
+  "name": "testcafe-ci-demo",
+  "description": "This repository contains sample TestCafe tests used in the [Continuous Integration tutorials](https://devexpress.github.io/testcafe/documentation/continuous-integration/).",
+  "version": "1.0.0",
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kanhaiya15/testcafe-ci-demo.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kanhaiya15/testcafe-ci-demo/issues"
+  },
+  "homepage": "https://github.com/kanhaiya15/testcafe-ci-demo#readme"
 }
